--- a/llt.bib
+++ b/llt.bib
@@ -157,6 +157,24 @@
 }
 
 
+@article{benavente2008parametric,
+  title={Parametric fuzzy sets for automatic color naming},
+  author={Benavente, Robert and Vanrell, Maria and Baldrich, Ramon},
+  journal={JOSA A},
+  volume={25},
+  number={10},
+  pages={2582--2593},
+  year={2008},
+  publisher={Optical Society of America}
+}
+
+@book{kay2009world,
+  title={The world color survey},
+  author={Kay, Paul and Berlin, Brent and Maffi, Luisa and Merrifield, William R and Cook, Richard},
+  year={2009},
+  publisher={CSLI Publications Stanford}
+}
+
 
 % ----- LIT REVIEW END -----
 
@@ -166,6 +184,7 @@
   year={1977},
   institution={SRI INTERNATIONAL MENLO PARK CA ARTIFICIAL INTELLIGENCE CENTER}
 }
+
 
 @misc{eyespectrum, title={Normalized human photoreceptor absorbances for different wavelengths of light}, 
 author={OpenStax College},
