--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{enumitem}
+\usepackage{float}
+\usepackage[noend]{algcompatible}
 
 
 \usepackage[x11names,dvipsnames,svgnames]{xcolor}
